      You could name a map "${H0}'s House". [James]
    * "Ignore Passmap" NPC setting, to walk through walls but not zones,
      the map edge, or NPCs/heroes. (Unlike "set npc ignores walls",
      which causes zones and map edge to be ignored.) [Ralph]
    * Add "Initial music/sound effects volume" settings to the General
      Preference Menu [Ralph]

  * New Plotscripting Features
    * "menu item at pixel" [Ralph, James]
    * You can now profile scripts (collect statistics on running times)
      by pressing Ctrl+F9. (Before, you had to download a special build
      to profile scripts.) More useful stats are now collected. [Ralph]
    * "run game" quits the current game and loads a different game
      (.rpg file/.rpgdir) [Ralph]
    * You can now pass arguments to the newgame and loadgame scripts by
      giving extra arguments to "resetgame" and "loadfromslot" [Ralph]
    * "reparent to npc" and "reparent to hero" convenience functions
      [James]
    * Added "show new game" argument to "load menu" command [Ralph]
    * "get battle countdown" and "set battle countdown" [Ralph]
    * "check wall collision x", "check wall collision y",
      "move slice with wallchecking" [Ralph]
    * "slice parent" alias to "parent slice"

  * Changes
    * Sound effects used to play at max volume, which has now changed
      to a default of 80% (because music defaulted to just 50%). In
      newly created games the defaults are both 75%. [Ralph]

  * Bugfixes
    * In old games, attacks with enemy type-killer bits wrongly counted
      as elemental for the purpose of spawning. This fix is only
      applied if the game has not been edited since Ypsiliform. [James]
    * The party leader will always draw on top of other heroes with the
      same Y position, and when heroes and NPCs are on the same layer,
      on top of NPCs that have the same Y position (instead of being
      layered unpredictably) This is most noticeable with vehicles that