@@ -883,7 +883,7 @@ END SUB
 'Fills zones() with the IDs of all the zones which this tile is a part of.
 'zones() should be a dynamic array, it's filled with unsorted ID numbers in zones(0) onwards
 'zones() is REDIMed to start at -1, for fake zero-length arrays
-SUB GetZonesAtTile(zmap as ZoneMap, zones() as integer, byval x as integer, byval y as integer)
+SUB GetZonesAtTile(zmap as ZoneMap, zones() as integer, x as integer, y as integer, maxid as integer = 65535)
   WITH zmap
     DIM bitvector as ushort = .bitmap[x + y * .wide]
     DIM IDmap as ushort ptr = @.zoneIDmap[(x \ 4 + (y \ 4) * .wide_segments) * 16]
@@ -895,8 +895,10 @@ SUB GetZonesAtTile(zmap as ZoneMap, zones() as integer, byval x as integer, byva
     DIM nextindex as integer = 0
     FOR slot as integer = 0 TO 14
       IF bitvector AND (1 SHL slot) THEN
-        zones(nextindex) = IDmap[slot]
-        nextindex += 1
+        IF IDmap[slot] <= maxid THEN
+          zones(nextindex) = IDmap[slot]
+          nextindex += 1
+        END IF
       END IF
     NEXT
     REDIM PRESERVE zones(-1 TO nextindex - 1)
@@ -904,9 +906,9 @@ SUB GetZonesAtTile(zmap as ZoneMap, zones() as integer, byval x as integer, byva
 END SUB
 
 'Returns zones at a tile, in a sorted vector
-FUNCTION GetZonesAtTile(zmap as ZoneMap, byval x as integer, byval y as integer) as integer vector
+FUNCTION GetZonesAtTile(zmap as ZoneMap, x as integer, y as integer, maxid as integer = 65535) as integer vector
   REDIM tmparray() as integer
-  GetZonesAtTile zmap, tmparray(), x, y
+  GetZonesAtTile zmap, tmparray(), x, y, maxid
   DIM zonesvec as integer vector
   array_to_vector zonesvec, tmparray() 
   v_sort zonesvec
