@@ -1597,6 +1597,7 @@ define constant, begin
 32,vehicleB
 64,harmtile
 128,overheadtile
+10000,zone:OneWayExit
 0,inside battle
 1,outside battle
 2,hero portrait
