@@ -42,6 +42,10 @@ WHAT IS NEW?
       which causes zones and map edge to be ignored.) [Ralph]
     * Add "Initial music/sound effects volume" settings to the General
       Preference Menu [Ralph]
+    * One-way walls. You can turn the walls on a tile into one-way walls
+      by pressing W in the passmap editor. All the walls on a tile are
+      either normal or one-way; you can't mix them on the same tile.
+      Not supported with default passability yet. [Ralph]
 
   * New Plotscripting Features
     * "menu item at pixel" [Ralph, James]
